2004-03-23  Sebastien Pouliot  <sebastien@ximian.com>

	* CryptoConvert.cs: Added exception for null and bad parameters.
	* RSAManaged.cs: CryptographicException thrown when trying to export
	the private key when only the public key is present (CRT aware).

2004-03-22  Sebastien Pouliot  <sebastien@ximian.com>

	* CryptoConvert.cs: Added new methods to convert [From|To]Hex. Added
	new version of FromCapiPublicKeyBlob with an integer offset.

2004-02-06  Sebastien Pouliot  <sebastien@ximian.com>

	* DSAManaged.cs: Added an event after key generation (so that
	DSACryptoServiceProvider can persist the keypair if required). Added
	PublicOnly property (like 1.2) so we do not have to catch an exception
	to know if a private key is present or not. Added a Random property so
	we do not always have to create a RNG instance (not always required).
	* RSAManaged.cs: Added an event after key generation (so that
	DSACryptoServiceProvider can persist the keypair if required). Added
	PublicOnly property (like 1.2) so we do not have to catch an exception
	to know if a private key is present or not.
	* SymmetricTransform.cs: This class was split from S.S.C.
	SymmetricAlgorithm.cs so it could be reused in Mono.Security 
	assembly for other symmetric algorithms transforms.

2004-02-05  Sebastien Pouliot  <sebastien@ximian.com>

	* KeyPairPersistence.cs: New. Class to persist keypairs in an XML
	format to mimic the CryptoAPI key containers.

2004-01-12  Sebastien Pouliot  <spouliot@videotron.ca>

	* CryptoConvert.cs: RSA doesn't start with a Q - at least that what
	a strongname told me. Sorry Ron :(

2003-12-15  Sebastien Pouliot  <spouliot@videotron.ca>

	* MACAlgorithm.cs: Fixed difference between 1.0 and 1.1 framework. 
	The 1.0 framework is adding an additional  padding block (empty) 
	to MAC when MACing an exact multiple of the TripleDES block size.
	* PKCS1.cs: Fixed a typo which prevented "lame" (without OID) 
	signature verification.
