@@ -1,5 +1,10 @@
 2004-03-23  Sebastien Pouliot  <sebastien@ximian.com>
 
+	* CryptoConvert.cs: Added support for public keys preceded by an 
+	header like the one generated by "sn -e".
+
+2004-03-23  Sebastien Pouliot  <sebastien@ximian.com>
+
 	* CryptoConvert.cs: Added exception for null and bad parameters.
 	* RSAManaged.cs: CryptographicException thrown when trying to export
 	the private key when only the public key is present (CRT aware).
